zeir-manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: zeir-ingress
spec:
  rules:
  - host: zeir-openmrs.bluecodeltd.com
    http:
      paths:
      - path:
        backend:
          serviceName: openmrs-service
          servicePort: 8080
  - host: zeir-opensrp.bluecodeltd.com
    http:
      paths:
      - path:
        backend:
          serviceName: opensrp-service
          servicePort: 8080
